<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_tiago_perception</name>
  <version>1.0.0</version>
  <description>Paquete unificado para filtrado, compresión y concatenación de pointclouds del robot TIAGo y cámaras externas.</description>
  <maintainer email="jeremy.delgado@todo.todo">Jeremy Delgado</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cloudini_lib</depend>
  <depend>point_cloud_interfaces</depend>
  <depend>eigen</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_eigen</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>